Deleted mini-corpus, updated IBM1 model.

--- a/doc/report1.tex
+++ b/doc/report1.tex
@@ -7,9 +7,8 @@
 \newcommand\BibTeX{B{\sc ib}\TeX}
 \aclfinalcopy
 
-\title{NLP 2 - Project 1}
-
-\author{Pepijn Kokke, Edwin Odijk, Thijs Scheepers}
+\title{NLP 2 -- Project 1}
+\author{Pepijn Kokke \and Edwin Odijk \and Thijs Scheepers}
 
 \date{}
 
